--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "dependencies": {
     "@hono/node-server": "^1.3.5",
     "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.29.3",
     "hono": "^3.12.0",
     "inversify": "^6.0.2",
-    "reflect-metadata": "^0.2.1"
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.2.1",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/pg": "^8.10.9",
+    "drizzle-kit": "^0.20.10",
     "tsx": "^3.12.2"
   }
 }
