--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "migration:generate": "drizzle-kit generate:pg",
+    "migration:push":"drizzle-kit push:pg",
+    "migration:intro":"drizzle-kit introspect:pg"
   },
   "dependencies": {
     "@hono/node-server": "^1.3.5",
+    "@types/inversify": "^2.0.33",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.3",
     "hono": "^3.12.0",
     "inversify": "^6.0.2",
     "pg": "^8.11.3",
+    "postgres": "^3.4.3",
     "reflect-metadata": "^0.2.1",
     "typescript": "^5.3.3"
   },
