--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "dev": "tsx watch src/index.ts",
+    "build":"tsc",
     "mig:gen": "drizzle-kit generate:pg",
     "mig:pull":"drizzle-kit introspect:pg",
     "mig:push":"drizzle-kit push:pg"
