--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build":"tsc",
+    "build": "rimraf ./dist && tsc",
     "mig:gen": "drizzle-kit generate:pg",
-    "mig:pull":"drizzle-kit introspect:pg",
-    "mig:push":"drizzle-kit push:pg"
+    "mig:pull": "drizzle-kit introspect:pg",
+    "mig:push": "drizzle-kit push:pg"
   },
   "dependencies": {
     "@hono/node-server": "^1.3.5",
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/pg": "^8.10.9",
     "drizzle-kit": "^0.20.10",
+    "rimraf": "^5.0.5",
     "tsx": "^3.12.2"
   }
 }
